--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
@@ -8,14 +8,16 @@
         android:id="@+id/sliding_layout"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:background="@android:color/white"
         android:gravity="bottom"
+        sothree:umanoAnchorPoint="0.4"
+        sothree:umanoFadeColor="@android:color/transparent"
         sothree:umanoPanelHeight="68dp"
         sothree:umanoShadowHeight="4dp">
 
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent">
-
 
             <fragment
                 android:id="@+id/map"
@@ -34,17 +36,22 @@
                 android:layout_marginEnd="20dp"
                 android:layout_marginRight="20dp"
                 android:background="@drawable/circle"
+                android:contentDescription="Current Location"
                 android:src="@drawable/ic_gps_fixed_black_24dp" />
-
 
         </RelativeLayout>
 
-        <TextView
+        <!-- Pane Content -->
+        <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:gravity="center|top"
-            android:text="Slide me up"
-            android:textSize="16sp" />
+            android:layout_height="match_parent">
+
+            <include
+                layout="@layout/panelbar_top"
+                android:layout_width="match_parent"
+                android:layout_height="68dp" />
+
+        </RelativeLayout>
     </com.sothree.slidinguppanel.SlidingUpPanelLayout>
 
 </RelativeLayout>
