--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/panelbar_top.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/panelbar_top.xml
@@ -9,54 +9,65 @@
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginLeft="15dp"
-        android:layout_marginStart="15dp"
-        android:layout_weight="0.6"
-        android:orientation="vertical">
+        android:layout_weight="0.57"
+        android:orientation="vertical"
+        android:paddingEnd="15dp"
+        android:paddingLeft="15dp"
+        android:paddingRight="15dp"
+        android:paddingStart="15dp">
 
         <TextView
             android:id="@+id/planeName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:ellipsize="middle"
-            android:scrollHorizontally="false"
-            android:text="@string/no_plane_marker_selected"
+            android:ellipsize="end"
+            android:singleLine="true"
+            android:text="XYZ Aircraft 789"
             android:textSize="16sp" />
 
         <TextView
             android:id="@+id/airlineName"
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:text="Abc Airlines" />
     </LinearLayout>
 
-    <LinearLayout
+    <RelativeLayout
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:layout_gravity="center_vertical"
-        android:layout_marginEnd="5dp"
-        android:layout_marginRight="5dp"
-        android:layout_weight="0.4"
-        android:orientation="horizontal">
+        android:layout_weight="0.43"
+        android:background="@drawable/border">
 
-        <TextView
-            android:id="@+id/planeFrom"
+        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginEnd="2dp"
-            android:layout_marginRight="2dp"
-            android:layout_marginTop="5dp"
-            android:textSize="22sp" />
+            android:layout_centerInParent="true"
+            android:orientation="horizontal">
 
-        <ImageView
-            android:id="@+id/plane_from_to_img"
-            android:layout_width="40dp"
-            android:layout_height="40dp" />
+            <TextView
+                android:id="@+id/planeFrom"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="ABC"
+                android:textSize="22sp" />
 
-        <TextView
-            android:id="@+id/planeTo"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="5dp"
-            android:textSize="22sp" />
-    </LinearLayout>
+            <ImageView
+                android:id="@+id/plane_from_to_img"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/plane_from_to" />
+
+            <TextView
+                android:id="@+id/planeTo"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:text="XYZ"
+                android:textSize="22sp" />
+        </LinearLayout>
+    </RelativeLayout>
+
 </LinearLayout>
