--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/anchored_panel_layout.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/anchored_panel_layout.xml
@@ -7,20 +7,22 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="13.7dp"
         android:orientation="vertical"
         android:paddingEnd="15dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:paddingStart="15dp"
-        android:layout_marginTop="13.7dp">
+        android:paddingStart="15dp">
 
         <TextView
+            android:id="@+id/anchoredPanelPlaneName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XYZ Aircraft 789 W/ ABC Lines"
             android:textSize="16sp" />
 
         <TextView
+            android:id="@+id/anchoredPanelAirlineName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="Abc Airlines Inc." />
@@ -29,14 +31,15 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginTop="13.7dp"
         android:orientation="horizontal"
         android:paddingEnd="15dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:paddingStart="15dp"
-        android:layout_marginTop="13.7dp">
+        android:paddingStart="15dp">
 
         <TextView
+            android:id="@+id/anchoredPanelDestFrom"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
@@ -50,6 +53,7 @@
             android:src="@drawable/plane_from_to" />
 
         <TextView
+            android:id="@+id/anchoredPanelDestTo"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center"
