--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
@@ -39,8 +39,8 @@
 
         <ImageView
             android:id="@+id/planeImage"
-            android:layout_width="wrap_content"
-            android:layout_height="240dp"
+            android:layout_width="match_parent"
+            android:layout_height="230dp"
             android:layout_alignParentBottom="true"
             android:scaleType="centerCrop"
             android:src="@drawable/plane" />
