--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
@@ -43,7 +43,7 @@
             android:layout_height="230dp"
             android:layout_alignParentBottom="true"
             android:scaleType="centerCrop"
-            android:src="@drawable/no_plane_image" />
+            android:src="@drawable/transparent" />
 
     </RelativeLayout>
 
