--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/opened_panel_layout.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/opened_panel_layout.xml
@@ -93,15 +93,54 @@
         </LinearLayout>
     </LinearLayout>
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/planeAltitudeChart"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="140dp"
-        android:layout_marginTop="20dp" />
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
-    <com.github.mikephil.charting.charts.LineChart
-        android:id="@+id/planeSpeedChart"
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="150dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="10dp"
+            android:src="@drawable/up_down_arrow" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/planeAltitudeChart"
+            android:layout_width="match_parent"
+            android:layout_height="140dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp" />
+    </LinearLayout>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="180dp"
-        android:layout_marginTop="20dp" />
+        android:layout_height="wrap_content">
+
+        <ImageView
+            android:layout_width="50dp"
+            android:layout_height="140dp"
+            android:layout_marginEnd="5dp"
+            android:layout_marginLeft="10dp"
+            android:layout_marginRight="5dp"
+            android:layout_marginStart="10dp"
+            android:layout_marginTop="40dp"
+            android:src="@drawable/speed" />
+
+        <com.github.mikephil.charting.charts.LineChart
+            android:id="@+id/planeSpeedChart"
+            android:layout_width="match_parent"
+            android:layout_height="180dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="20dp"
+            android:layout_marginStart="5dp"
+            android:layout_marginTop="20dp" />
+    </LinearLayout>
 </LinearLayout>
