new icon, add splash screen, make status bar transparent for map, set status bar color to image color when panel expanded

--- a/app/android/WhatPlaneIsThat/app/src/main/res/values/styles.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/values/styles.xml
@@ -4,6 +4,8 @@
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
         <item name="android:windowActionBarOverlay">true</item>
+        <item name="colorPrimary">@color/logo_color</item>
+        <item name="colorPrimaryDark">@color/logo_color_dark</item>
     </style>
 
 </resources>
