--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/opened_panel_layout.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/opened_panel_layout.xml
@@ -3,11 +3,11 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-
+    
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="13.7dp"
+        android:layout_marginTop="33dp"
         android:orientation="vertical"
         android:paddingEnd="15dp"
         android:paddingLeft="15dp"
@@ -19,7 +19,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XYZ Aircraft 789 W/ ABC Lines"
-            android:textSize="16sp" />
+            android:textSize="20sp" />
 
         <TextView
             android:id="@+id/anchoredPanelAirlineName"
@@ -33,7 +33,7 @@
         android:layout_height="wrap_content"
         android:layout_marginLeft="10dp"
         android:layout_marginStart="10dp"
-        android:layout_marginTop="15dp"
+        android:layout_marginTop="25dp"
         android:orientation="horizontal">
 
         <ImageView
@@ -96,7 +96,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+        android:layout_marginTop="10dp">
 
         <ImageView
             android:layout_width="50dp"
@@ -136,7 +137,7 @@
         <com.github.mikephil.charting.charts.LineChart
             android:id="@+id/planeSpeedChart"
             android:layout_width="match_parent"
-            android:layout_height="180dp"
+            android:layout_height="150dp"
             android:layout_marginEnd="20dp"
             android:layout_marginLeft="5dp"
             android:layout_marginRight="20dp"
