--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/opened_panel_layout.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/opened_panel_layout.xml
@@ -3,29 +3,33 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical">
-    
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="33dp"
+        android:background="@color/logo_color"
         android:orientation="vertical"
+        android:paddingBottom="10dp"
         android:paddingEnd="15dp"
         android:paddingLeft="15dp"
         android:paddingRight="15dp"
-        android:paddingStart="15dp">
+        android:paddingStart="15dp"
+        android:paddingTop="33dp">
 
         <TextView
             android:id="@+id/anchoredPanelPlaneName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="XYZ Aircraft 789 W/ ABC Lines"
+            android:textColor="@android:color/white"
             android:textSize="18sp" />
 
         <TextView
             android:id="@+id/anchoredPanelAirlineName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Abc Airlines Inc." />
+            android:text="Abc Airlines Inc."
+            android:textColor="@android:color/white" />
     </LinearLayout>
 
     <LinearLayout
@@ -96,8 +100,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:layout_marginTop="10dp">
+        android:layout_marginTop="10dp"
+        android:orientation="horizontal">
 
         <ImageView
             android:layout_width="50dp"
