--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
@@ -6,7 +6,7 @@
     android:layout_height="match_parent"
     android:background="@android:color/white"
     android:gravity="bottom"
-    sothree:umanoAnchorPoint="0.63"
+    sothree:umanoAnchorPoint="@integer/sliding_panel_anchor_point"
     sothree:umanoFadeColor="@android:color/transparent"
     sothree:umanoPanelHeight="68dp"
     sothree:umanoShadowHeight="4dp"
@@ -40,7 +40,7 @@
         <ImageView
             android:id="@+id/planeImage"
             android:layout_width="match_parent"
-            android:layout_height="230dp"
+            android:layout_height="@dimen/plane_image_height"
             android:layout_alignParentBottom="true"
             android:scaleType="centerCrop"
             android:src="@drawable/transparent" />
