--- a/app/android/WhatPlaneIsThat/app/src/main/res/values/styles.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/values/styles.xml
@@ -8,4 +8,19 @@
         <item name="colorPrimaryDark">@color/logo_color_dark</item>
     </style>
 
+    <dimen name="plane_image_height">230dp</dimen>
+
+    <item name="sliding_panel_anchor_point" format="float" type="integer">0.63</item>
+
+    <dimen name="opened_panel_red_bar_padding_bottom">10dp</dimen>
+    <dimen name="opened_panel_redbar_title_size">18sp</dimen>
+    <dimen name="opened_panel_redbar_subtitle_size">14sp</dimen>
+
+    <dimen name="graph_view_height">150dp</dimen>
+
+    <drawable name="from_to_image">@drawable/from_to</drawable>
+
+    <dimen name="plane_from_to_title_text_size">20sp</dimen>
+    <dimen name="plane_from_to_subtitle_text_size">14sp</dimen>
+
 </resources>
