--- a/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
+++ b/app/android/WhatPlaneIsThat/app/src/main/res/layout/activity_main.xml
@@ -1,16 +1,17 @@
-<com.sothree.slidinguppanel.SlidingUpPanelLayout android:id="@+id/sliding_layout"
-                                                 xmlns:android="http://schemas.android.com/apk/res/android"
-                                                 xmlns:sothree="http://schemas.android.com/apk/res-auto"
-                                                 xmlns:tools="http://schemas.android.com/tools"
-                                                 android:layout_width="match_parent"
-                                                 android:layout_height="match_parent"
-                                                 android:background="@android:color/white"
-                                                 android:gravity="bottom"
-                                                 sothree:umanoAnchorPoint="@integer/sliding_panel_anchor_point"
-                                                 sothree:umanoFadeColor="@android:color/transparent"
-                                                 sothree:umanoPanelHeight="68dp"
-                                                 sothree:umanoShadowHeight="4dp"
-                                                 tools:context=".MainActivity">
+<com.sothree.slidinguppanel.SlidingUpPanelLayout
+    android:id="@+id/sliding_layout"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:sothree="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@android:color/white"
+    android:gravity="bottom"
+    sothree:umanoAnchorPoint="@integer/sliding_panel_anchor_point"
+    sothree:umanoFadeColor="@android:color/transparent"
+    sothree:umanoPanelHeight="68dp"
+    sothree:umanoShadowHeight="4dp"
+    tools:context=".MainActivity">
 
     <RelativeLayout
         android:id="@+id/panelMainContent"
